[gd_scene load_steps=3 format=3 uid="uid://cnau4ofvlo2tg"]

[ext_resource type="Theme" uid="uid://d0esgdgk21mnn" path="res://default_theme.tres" id="1_wmwrt"]
[ext_resource type="Script" path="res://ui.gd" id="2_7xc4c"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wmwrt")
script = ExtResource("2_7xc4c")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="RightShoulderXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Shoulder X: "

[node name="RightShoulderXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightShoulderYLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Shoulder Y: "

[node name="RightShoulderYSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightShoulderZLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Shoulder Z: "

[node name="RightShoulderZSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightElbowXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Elbow X: "

[node name="RightElbowXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -90.0
max_value = 90.0
step = 0.1
alignment = 1

[node name="LeftShoulderXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Shoulder X: "

[node name="LeftShoulderXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftShoulderYLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Shoulder Y: "

[node name="LeftShoulderYSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftShoulderZLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Shoulder Z: "

[node name="LeftShoulderZSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftElbowXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Elbow X: "

[node name="LeftElbowXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -90.0
max_value = 90.0
step = 0.1
alignment = 1

[node name="RightLegXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Leg X: "

[node name="RightLegXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightLegYLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Leg Y: "

[node name="RightLegYSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightLegZLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Leg Z: "

[node name="RightLegZSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="RightKneeXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Knee X: "

[node name="RightKneeXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -90.0
max_value = 90.0
step = 0.1
alignment = 1

[node name="LeftLegXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Leg X: "

[node name="LeftLegXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftLegYLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Leg Y: "

[node name="LeftLegYSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftLegZLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Leg Z: "

[node name="LeftLegZSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
step = 0.1
alignment = 1

[node name="LeftKneeXLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Knee X: "

[node name="LeftKneeXSpinBox" type="SpinBox" parent="GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -90.0
max_value = 90.0
step = 0.1
alignment = 1

[connection signal="value_changed" from="GridContainer/RightShoulderXSpinBox" to="." method="__changed" binds= ["rshoulderx"]]
[connection signal="value_changed" from="GridContainer/RightShoulderYSpinBox" to="." method="__changed" binds= ["rshouldery"]]
[connection signal="value_changed" from="GridContainer/RightShoulderZSpinBox" to="." method="__changed" binds= ["rshoulderz"]]
[connection signal="value_changed" from="GridContainer/RightElbowXSpinBox" to="." method="__changed" binds= ["relbowx"]]
[connection signal="value_changed" from="GridContainer/LeftShoulderXSpinBox" to="." method="__changed" binds= ["lshoulderx"]]
[connection signal="value_changed" from="GridContainer/LeftShoulderYSpinBox" to="." method="__changed" binds= ["lshouldery"]]
[connection signal="value_changed" from="GridContainer/LeftShoulderZSpinBox" to="." method="__changed" binds= ["lshoulderz"]]
[connection signal="value_changed" from="GridContainer/LeftElbowXSpinBox" to="." method="__changed" binds= ["lelbowx"]]
[connection signal="value_changed" from="GridContainer/RightLegXSpinBox" to="." method="__changed" binds= ["rlegx"]]
[connection signal="value_changed" from="GridContainer/RightLegYSpinBox" to="." method="__changed" binds= ["rlegy"]]
[connection signal="value_changed" from="GridContainer/RightLegZSpinBox" to="." method="__changed" binds= ["rlegz"]]
[connection signal="value_changed" from="GridContainer/RightKneeXSpinBox" to="." method="__changed" binds= ["rkneex"]]
[connection signal="value_changed" from="GridContainer/LeftLegXSpinBox" to="." method="__changed" binds= ["llegx"]]
[connection signal="value_changed" from="GridContainer/LeftLegYSpinBox" to="." method="__changed" binds= ["llegy"]]
[connection signal="value_changed" from="GridContainer/LeftLegZSpinBox" to="." method="__changed" binds= ["llegz"]]
[connection signal="value_changed" from="GridContainer/LeftKneeXSpinBox" to="." method="__changed" binds= ["lkneex"]]
